[package]
name = "cargo-featurex"
version = "0.1.14"
edition = "2021"
description = "cargo plugin to run tasks against feature powersets"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/cargo-featurex"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitarr = "0.2.0"
cargo_metadata = "0.18.1"
clap = { version = "4.5.1", features = ["derive"] }
error-stack = "0.4.1"
itertools = "0.12.1"
lasso = { version = "0.7.2", features = ["ahasher"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.109" }
termcolor = "1.4.1"
thiserror = "1.0.57"
